# cmi-behavior-sensor-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 2a_modelling.ipynb  2b_modelling_CV.ipynb
scripts/: lstm_baseline.py  lstm_cnn.py
