[project]
name = "cmi-behavior-sensor-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "category-encoders>=2.8.1",
    "hyperopt>=0.2.7",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.2",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "skrub>=0.5.4",
    "statsmodels>=0.14.5",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
